# quantum-robot

./: .codecov.yml  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dev-environment.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-package.yml  codeql-analysis.yml  package-check.yml  python-package.yml  super-linter.yml
doc/: abstract_nodes_flowchart.drawio
docker/: Dockerfile  Dockerfile_with_redis  README.md  start_redis.sh
docs/: Makefile  README.rst  README_PYPI.md  conf.py  docs_requirements.txt  getting_started.rst  index.rst  info.rst  infographics.drawio  install.rst  license.rst  models.rst  notebooks.rst  pypi_readme.md  pypi_readme_export.sh  pypy_readme.md  readme_export.py  readme_pypi_export.sh  summary.rst
docs/_static/: theme_overrides.css
docs/about/: about.rst  citing.rst  contributing.rst  references.rst
docs/docstring_example/: template.py
docs/documentation/: bursts.rst  dashboard.rst  documentation.rst  logger.rst  models.rst  qunits.rst  visualization.rst
docs/example/: qrobot_doc.py
docs/getting_started/: dependencies.rst  getting_started.rst  install.rst  notebooks.rst
docs/getting_started/notebooks/: demo_angular_dim1.ipynb  demo_rgb_utils.py
docs/getting_started/notebooks/.ipynb_checkpoints/: Tutorial1-checkpoint.ipynb  computation_speed-checkpoint.ipynb  demo_RGB_utils-checkpoint.py  demo_angular_dim3_RGB-checkpoint.ipynb  demo_angular_dim3_rgb-checkpoint.ipynb  model_testing_utils-checkpoint.py  multisensory_cube-checkpoint.ipynb  multisensory_cube_analysis-checkpoint.ipynb  specs_utils-checkpoint.py  untitled-checkpoint.ipynb
docs/images/: components.drawio
docs/infographics/: infographics.drawio
docs/modules/: citing.rst  contributing.rst  install.rst  license.rst  models_diagram.rst  references.rst  summary.rst
docs/notebooks/: 01_introduction_to_quantum-robot.ipynb  02_monodimensional_angular_model.ipynb  03_multidimensional_angular_model.ipynb  04_linear_angular_model_comparison.ipynb  05_computation_speed_benchmark.ipynb  06_qunits_getting_started.ipynb  1. Introduction to quantum-robot.ipynb  2. Monodimensional Angular Model.ipynb  computation_speed.ipynb  demo_angular_dim3_rgb.ipynb  demo_rgb_utils.py  model_comparison.ipynb  model_comparison_utils.py  notebooks.rst  qunits_demo.ipynb  specs_utils.py  tutorial_qunits.ipynb
docs/notebooks/.ipynb_checkpoints/: model_testing-checkpoint.ipynb
docs/notebooks/06_imgs/: tutorial_qunits_basicnetwork.drawio
notebooks/: Tutorial1.ipynb  Untitled.ipynb  computation_speed.ipynb  demo_RGB.ipynb  demo_RGB_utils.py  demo_angular.ipynb  demo_angular_dim1.ipynb  demo_angular_dim3_RGB.ipynb  demo_angular_dim3_rgb.ipynb  demo_rgb_utils.py  model_comparison.ipynb  model_comparison_utils.py  multisensory_cube_analysis.ipynb  multisensory_cube_analysis.py  specs_utils.py  tutorial1.ipynb  tutorial_qunits.ipynb  tutorial_qunits_basicnetwork
notebooks/data/: df_AngularModel_n3_tau1_target[0, 0, 0]_sr15.csv  df_AngularModel_n3_tau1_target[0, 0, 0]_sr30.csv  df_AngularModel_n3_tau1_target[0, 0, 0]_sr5.csv  df_AngularModel_n3_tau1_target[0.5, 0.5, 0.5]_sr15.csv  df_AngularModel_n3_tau1_target[0.5, 0.5, 0.5]_sr30.csv  df_AngularModel_n3_tau1_target[0.5, 0.5, 0.5]_sr5.csv  df_BurstAmplification_n3_tau1_target[0, 0, 0]_sr30.csv  df_BurstAmplification_n3_tau1_target[0, 0, 0]_sr5.csv  df_BurstAmplification_n3_tau1_target[0.5, 0.5, 0.5]_sr30.csv  df_BurstAmplification_n3_tau1_target[0.5, 0.5, 0.5]_sr5.csv  df_LinearModel_n3_tau1_target[0, 0, 0]_sr15.csv  df_LinearModel_n3_tau1_target[0, 0, 0]_sr30.csv  df_LinearModel_n3_tau1_target[0, 0, 0]_sr5.csv  df_LinearModel_n3_tau1_target[0.5, 0.5, 0.5]_sr15.csv  df_LinearModel_n3_tau1_target[0.5, 0.5, 0.5]_sr30.csv  df_LinearModel_n3_tau1_target[0.5, 0.5, 0.5]_sr5.csv
qrobot/: __init__.py  core.py  models.py  roscore.py
qrobot/bursts/: __init__.py  burst.py  oneburst.py  zeroburst.py
qrobot/core/: core.py  singleton.py
qrobot/dashboard/: __init__.py  frontend.py  layout.py  plots.py  server.py
qrobot/dashboard/assets/: style.css
qrobot/logs/: __init__.py  logger.py
qrobot/models/: __init__.py  angularamplifier.py  angularmodel.py  burstamodel.py  linearmodel.py  model.py
qrobot/qunit/: __init__.py  qunit.py
qrobot/qunits/: __init__.py  no_ros_qunit.py  qunit.py
qrobot/tests/: test_angularmodel.py  test_burstamodel.py  test_linearmodel.py
qrobot/tests/models/: test_angularmodel.py  test_burstamodel.py  test_linearmodel.py
qrobot/webapp/: __init__.py  app.py
qrobot/webapp/templates/: index.html
src/qrobot/: __init__.py
src/qrobot/_logger/: __init__.py  logger.py
src/qrobot/bursts/: __init__.py  burst.py  oneburst.py  zeroburst.py
src/qrobot/dashboard/: __init__.py  app.py  config.py  layout.py  plots.py  server.py
src/qrobot/dashboard/assets/: style.css
src/qrobot/draw/: draw.py
src/qrobot/graph/: graph.py
src/qrobot/logs/: logger.py
src/qrobot/models/: __init__.py  angularmodel.py  linearmodel.py  model.py
src/qrobot/qunits/: __init__.py  base.py  base_unit.py  qunit.py  redis_utils.py  sensorial.py
src/scripts/: single-monodimensional-unit.py  single_monodim_unit.py
src/tests/bursts/: test_oneburst.py
src/tests/models/: test_angularmodel.py  test_linearmodel.py
tests/: test_roscore.py
tests/bursts/: test_oneburst.py  test_zeroburst.py
tests/core/: test_core.py
tests/dashboard/: test_dashboard.py
tests/graph/: test_graph.py
tests/models/: test_angularmodel.py  test_linearmodel.py
tests/qunits/: test_no_ros_qunit.py  test_qunit.py
tests/webapp/: test_core.py  test_dashboard.py
