[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = [
  "Davide Lanza <info@davidelanza.it>",
]
description = "A set of python modules for quantum-like perception modelling."
license = "GNU GPL"
maintainers = [
  "Davide Lanza <info@davidelanza.it>",
]
name = "quantum-robot"
version = "0.1"

readme = "README.md"

include = [
  {path = "tests", format = "sdist"},
]
packages = [
  {include = "qrobot", from = "src"},
]

documentation = "http://quantum-robot.org/docs"
homepage = "http://quantum-robot.org/"
repository = "https://github.com/python-poetry/poetry"

keywords = ["quantum", "robotics", "modeling"]

classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = ">=3.7,<4"

dash = ">=2.0"
matplotlib = ">=2.1"
numpy = ">=1.18"
pandas = ">=1.0"
qiskit = "^0.32"
redis = "*"
seaborn = ">=0.10"

[tool.poetry.group.dev.dependencies]
black = "*"
ipykernel = "*"
mypy = "*"
nbsphinx = ">=0.8.6"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
sphinx = ">=4.1.2"
sphinx_rtd_theme = ">=0.5.0"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
explicit_package_bases = true
files = "src"
mypy_path = "src"
namespace_packages = true
show_error_codes = true
strict = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
