[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = [
  "Davide Lanza <info@davidelanza.it>",
]
description = "A set of python modules for quantum-like perception modelling."
license = "GNU GPL"
maintainers = [
  "Davide Lanza <info@davidelanza.it>",
]
name = "quantum-robot"
version = "0.1"

readme = "README.md"

include = [
  {path = "tests", format = "sdist"},
]
packages = [
  {include = "qrobot", from = "src"},
]

documentation = "http://quantum-robot.org/docs"
homepage = "http://quantum-robot.org/"
repository = "https://github.com/python-poetry/poetry"

keywords = ["quantum", "robotics", "modeling"]

classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = ">=3.8,<4"

dash = ">=2.6.1"
matplotlib = ">=3.5.3"
numpy = ">=1.23.3"
pandas = ">=1.4.4"
qiskit = "^0.32"
redis = ">=4.3.4"
seaborn = ">=0.12.0"
networkx = "^2.8.8"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
ipykernel = ">=6.15.2"
ipython = ">=8.5.0"
notebook = "<7.0.0"
mistune = ">=2.0.4"
mypy = ">=0.971"
nbconvert = ">=7.0"
nbsphinx = ">=0.9.2"
pygments = ">=2.13.0"
pylint = ">=2.15.2"
pytest = ">=7.1.3"
pytest-check = "^1.0.10"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.8.2"
sphinx = ">=5.1.1"
sphinx_rtd_theme = ">=1.0.0"

[tool.pytest.ini_options]
markers = [
  "redis: marks tests which need a redis db (deselect with '-m \"not redis\"')",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "too-few-public-methods",
  "logging-fstring-interpolation",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
explicit_package_bases = true
files = "src"
mypy_path = "src"
namespace_packages = true
show_error_codes = true
strict = true

[tool.coverage.run]
omit = [
  # TODO: Omit dashboard and graph since in early development, clean them later
  "src/qrobot/graph/*",
  "src/qrobot/dashboard/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
