[metadata]
name = quantum-robot
version = 0.1
author = Davide Lanza
author_email = info@quantum-robot.org
description = A set of python modules for quantum-like perception modelling
long_description = file: README.md
long_description_content_type = text/markdown
url = http://quantum-robot.org
license = GNU GPL
project_urls =
    Bug Tracker = https://github.com/Davidelanz/quantum-robot/issues
    Documentation = http://quantum-robot.org/docs
    Source Code = https://github.com/Davidelanz/quantum-robot
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    dash>=2.0.0
    matplotlib>=2.1.1
    numpy>=1.18.5
    pandas>=1.0.4
    pytest>=5.4.3
    qiskit>=0.30.1
    redis
    seaborn>=0.10.1

[options.extras_require]
development =   
    black
    pylint
    coverage
    pytest>=5.4.3
    sphinx>=4.1.2
    sphinx_rtd_theme>=0.5.0
    ipykernel
    nbsphinx>=0.8.6

[options.packages.find]
where = src
